# PrioOStrich

./: .gitignore  0001-priority-plugin-support-14.03.patch  INSTALL  README  clean.py  future_maintenance  s.sh  slurm.cert  slurm.key  slurm_model  todo_notes
configs/: blank_14.03.conf.template  ostrich_14.03.conf.template  slurmdbd.conf.template
jobs/: sleep_job.py
ostrich_branch/: configure.ac
ostrich_branch/src/plugins/priority/: Makefile.am
ostrich_branch/src/plugins/priority/ostrich/: Makefile.am  priority_ostrich.c
